base/src/test/resources/failure/holes/issue747.aya.txt
In file $FILE:13:13 ->

  11 |   | pos a => a
  12 |   | posneg _ => 0
  13 |   | neg a => {??}
                    ^--^

Goal: Goal of type
        Nat
        (Normalized: Nat)
      Context:
        {a : Nat}
      To ensure confluence:
        Given (i => _), we should have: 0

In file $FILE:13:13 ->

  11 |   | pos a => a
  12 |   | posneg _ => 0
  13 |   | neg a => {??}
                    ^--^

Error: Unsolved meta _

1 error(s), 0 warning(s).
What are you doing?
